--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,6 +42,8 @@ post_class: post-template
 
                 <!-- Post Title -->
                 <h1 class="posttitle">{{ page.title }}</h1>
+                <span class="post-date"><time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time></span>           
+                {% include reading-time.html %}
             </div>
 
             <!-- Adsense if enabled from _config.yml (change your pub id and slot) -->
