--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@ post_class: post-template
 
                 <!-- Post Title -->
                 <h1 class="posttitle">{{ page.title }}</h1>
-                <span>Published on</span><span class="post-date"><span>Published on</span><time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time><span> |           
+                <span class="post-date"><span>Published on </span><time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time><span> |           
                 {% include reading-time.html %}</span> 
             </div>
 
