--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -21,7 +21,7 @@
     </li>
 -->
 
-    <li class="list-inline-item">
+    <li class1="list-inline-item">
       <a href="{{ site.linkedin }}">
         <span class="fa-stack fa-lg">
           <i class="fas fa-circle fa-stack-2x"></i>
