--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,6 +96,10 @@ ga('send', 'pageview');
                 <a target="_blank" class="nav-link" href="https://github.com/slsu0424"><i class="fab fa-github"></i> Github</a>
                 </li>
 
+                <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/landing">Landing</a>
+                </li>
+
                 {% include search-lunr.html %}
 
             </ul>
