--- a/_layouts/default_orig2.html
+++ b/_layouts/default_orig2.html
@@ -81,10 +81,7 @@ ga('send', 'pageview');
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/index.html">Home</a>
-                </li>
-
-                <a class="nav-link" href="{{ site.baseurl }}/blog.html">Blog</a>
+                <a class="nav-link" href="{{ site.baseurl }}/index.html">Blog</a>
                 </li>
 
                 <li class="nav-item">
