--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,7 +83,8 @@ ga('send', 'pageview');
                 {% endif %}
                 <a class="nav-link" href="{{ site.baseurl }}/index.html">Home</a>
                 </li>
-
+                
+                <li class="nav-item">
                 <a class="nav-link" href="{{ site.baseurl }}/blog.html">Blog</a>
                 </li>
 
