--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@ ga('send', 'pageview');
                 <li class="nav-item">
                 <a class="nav-link" href="{{ site.baseurl }}/resources">Resources</a>
                 </li>
-                
+
                 <!--
                 <li class="nav-item">
                 <a target="_blank" class="nav-link" href="https://github.com/slsu0424"><i class="fab fa-github"></i> Github</a>
@@ -120,12 +120,14 @@ ga('send', 'pageview');
 
 <!-- Site Title
 ================================================== -->
-<!-- <div class="mainheading">
+<div class="mainheading">
+<!--   
     <h1 class="sitetitle">{{ site.name }}</h1>
     <p class="lead">
         {{ site.description }}
-    </p>
-</div> -->
+    </p> 
+-->
+</div> 
 
 <!-- Content
 ================================================== -->
