--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,11 +81,7 @@ ga('send', 'pageview');
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/index.html">Home</a>
-                </li>
-                
-                <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/blog.html">Blog</a>
+                <a class="nav-link" href="{{ site.baseurl }}/index.html">Blog</a>
                 </li>
 
                 <li class="nav-item">
@@ -96,11 +92,14 @@ ga('send', 'pageview');
                 <a class="nav-link" href="{{ site.baseurl }}/resources">Resources</a>
                 </li>
 
-                <!--
                 <li class="nav-item">
                 <a target="_blank" class="nav-link" href="https://github.com/slsu0424"><i class="fab fa-github"></i> Github</a>
                 </li>
-                -->
+
+                <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/landing">Landing</a>
+                </li>
+
                 {% include search-lunr.html %}
 
             </ul>
@@ -121,13 +120,11 @@ ga('send', 'pageview');
 <!-- Site Title
 ================================================== -->
 <div class="mainheading">
-<!--   
     <h1 class="sitetitle">{{ site.name }}</h1>
     <p class="lead">
         {{ site.description }}
-    </p> 
--->
-</div> 
+    </p>
+</div>
 
 <!-- Content
 ================================================== -->
@@ -159,7 +156,7 @@ ga('send', 'pageview');
 
 <!-- Categories Jumbotron
 ================================================== -->
-<!-- <div class="jumbotron fortags">
+<div class="jumbotron fortags">
 	<div class="d-md-flex h-100">
 		<div class="col-md-4 transpdark align-self-center text-center h-100">
             <div class="d-md-flex align-items-center justify-content-center h-100">
@@ -180,7 +177,7 @@ ga('send', 'pageview');
             {% assign categories_list = nil %}
 		</div>
 	</div>
-</div> -->
+</div>
 
 <!-- Begin Footer
 ================================================== -->
