--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -181,10 +181,10 @@ ga('send', 'pageview');
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-6 text-center text-lg-left">
-                Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
+                Copyright © {{ site.time | date: "%Y" }} {{ site.owner }} 
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">    
-                <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">Mediumish Jekyll Theme</a> by WowThemes.net
+                Designed by <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">WowThemes</a>
             </div>
         </div>
     </div>
