--- a/_layouts/default_blog.html
+++ b/_layouts/default_blog.html
@@ -185,7 +185,7 @@ ga('send', 'pageview');
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-6 text-center text-lg-left">
-                Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
+                Copyright © {{ site.time | date: "%Y" }} {{ site.owner }} 
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">    
                 Designed by <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">WowThemes</a>
