--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,13 +78,13 @@ ga('send', 'pageview');
                     </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ site.baseurl }}/blog.html">Blog</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/blog/index.html">Blog</a>
                     </li>
 
                 <li class="nav-item">
                 <a class="nav-link" href="{{ site.baseurl }}/resources">Resources</a>
                 </li>
-                
+
                 <!--
                 <li class="nav-item">
                 <a target="_blank" class="nav-link" href="https://github.com/slsu0424"><i class="fab fa-github"></i> Github</a>
