--- a/_layouts/default_blog.html
+++ b/_layouts/default_blog.html
@@ -89,7 +89,7 @@ ga('send', 'pageview');
                 </li>
                 
                 <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/blog.html">Blog</a>
+                <a class="nav-link" href="{{ site.baseurl }}/blog/index.html">Blog</a>
                 </li>
 
                 <li class="nav-item">
@@ -101,7 +101,7 @@ ga('send', 'pageview');
                 <a target="_blank" class="nav-link" href="https://github.com/slsu0424"><i class="fab fa-github"></i> Github</a>
                 </li>
                 -->
-                
+
                 {% include search-lunr.html %}
 
             </ul>
