--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -122,7 +122,7 @@ ga('send', 'pageview');
 <!-- Site Title
 ================================================== -->
 <div class="mainheading">
-    <h1 class="sitetitle">{{ site.blog }}</h1>
+    <h1 class="sitetitle">{{ site.title }}</h1>
     <p class="lead">
         {{ site.description }}
     </p>
