--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -98,6 +98,10 @@ ga('send', 'pageview');
                 <a class="nav-link" href="{{ site.baseurl }}/resources">Resources</a>
                 </li>
 
+                <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/contact">Contact</a>
+                </li>
+
                 <!--
                 <li class="nav-item">
                 <a target="_blank" class="nav-link" href="https://github.com/slsu0424"><i class="fab fa-github"></i> Github</a>
