--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,10 +117,16 @@ ga('send', 'pageview');
 ================================================== -->
 <div class="mainheading">
 
+    <div class="top-three"></div>
+
+    <!--
     <h1 class="sitetitle">{{ site.name }}</h1>
     <p class="lead">
         {{ site.description }}
     </p>
+
+    -->
+    
 <!--
     <h1 class="sitetitle">{{ }}</h1>
     <p class="lead">
