added <div class="row post-top-meta">

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,7 +117,8 @@ ga('send', 'pageview');
 ================================================== -->
 <div class="mainheading">
 
-    <div class="top-three"></div>
+    <div class="row post-top-meta"></div>
+    <!-- <p class="top-three"></p> -->
 
     <!--
     <h1 class="sitetitle">{{ site.name }}</h1>
@@ -126,7 +127,7 @@ ga('send', 'pageview');
     </p>
 
     -->
-    
+
 <!--
     <h1 class="sitetitle">{{ }}</h1>
     <p class="lead">
