--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,7 +117,7 @@ ga('send', 'pageview');
 ================================================== -->
 <div class="mainheading">
 
-    <div class="row post-top-meta"></div>
+    <div class="row post-top-met"></div>
     <!-- <p class="top-three"></p> -->
 
     <!--
