--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,20 +117,21 @@ ga('send', 'pageview');
 ================================================== -->
 <div class="mainheading">
 
-<!-- <div class="row post-top-meta"></div>  -->
+    <div class="row post-top-meta"></div>
 
 <!--
     <h1 class="sitetitle">{{ site.name }}</h1>  
 -->
+
+<!--
     <h1>{{ site.name }}</h1>  
     <p class="lead">
         {{ site.description }}
     </p>
-
-    -->
+-->
 
 <!--
-    <h1 class="sitetitle">{{ }}</h1>
+    <h1 class="sitetitle">{{ site.name }}</h1>
     <p class="lead">
         {{ }}
     </p>
