--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -196,7 +196,7 @@ ga('send', 'pageview');
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">    
-                Designed by <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">WowThemes</a>
+                Designed with <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">Jekyll</a>
             </div>
         </div>
     </div>
