--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,23 +122,21 @@ ga('send', 'pageview');
     <div class="row post-top-meta"></div>
 -->
 
-<!--
-    <h1 class="sitetitle">{{ site.name }}</h1>  
--->
-
-<!--
-    <h1>{{ site.name }}</h1>  
+<!-- Original
+<div class="mainheading">
+    <h1 class="sitetitle">{{ site.name }}</h1>
     <p class="lead">
         {{ site.description }}
     </p>
+</div>
 -->
 
-
     <h1 class="sitetitle">{{ site.name }}</h1>
+<!--
     <p class="lead">
         {{ }}
     </p>
-
+-->
 </div>
 
 <!-- Content
