--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -61,7 +61,10 @@ ga('send', 'pageview');
     <div class="container pr-0">
 
     <!-- Begin Logo -->
-    <!--
+    <a class="navbar-brand">
+    </a>
+
+    <!-- Original
     <a class="navbar-brand" href="{{ site.baseurl }}/">
     <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
     </a>
