--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -306,7 +306,7 @@ span.post-read-more a:hover {
 
 .mainheading h1.sitetitle {
    /* font-family: Righteous; */
-    font-family: "Gill Sans Extrabold", sans-serif;
+    font-family: Gill Sans;
 }
 
 .mainheading h1.posttitle {
