--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -905,13 +905,13 @@ iframe {
     transition: opacity .25s;
 }
 
-/* 2/26/24 - adding new for landing page */  
+/* 2/26/24 - adding new for landing page  
 .about {
     margin: 0 0 40px;
     text-align: center;
-  }
+}
   
-  .about .cover-author-image {
+.about .cover-author-image {
     width: 100px;
     height: 100px;
     margin: 0 auto 10px;
@@ -919,4 +919,15 @@ iframe {
             border-radius: 100%;
     overflow: hidden;
     background-color: #333030;
-  }
+}
+*/
+
+.cover-author-image {
+    width: 100px;
+    height: 100px;
+    margin: 0 auto 10px;
+    -webkit-border-radius: 100%;
+            border-radius: 100%;
+    overflow: hidden;
+    background-color: #333030;
+}
