--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -929,5 +929,5 @@ iframe {
     -webkit-border-radius: 100%;
             border-radius: 100%;
     overflow: hidden;
-    background-color: #333030;
+/*     background-color: #333030; */
 }
