--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,8 @@ ga('send', 'pageview');
     <!-- Begin Logo -->
     <a class="navbar-brand">
     </a>
-    <!--
+    
+    <!-- Original
     <a class="navbar-brand" href="{{ site.baseurl }}/">
     <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
     </a>
