--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -926,7 +926,7 @@ iframe {
     width: 200px;
     height: 200px;
 /*  margin: 0 auto 10px; */
-    margin: 10px auto 10px; */
+    margin: 10px auto 10px;
     -webkit-border-radius: 100%;
             border-radius: 100%;
     overflow: hidden;
