--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -934,6 +934,9 @@ iframe {
 }
 
 .box {
-    display: flex;
- /*   flex-direction: row; */
+    display: inline-flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    border: 1px solid black;
   }
