--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -938,5 +938,5 @@ iframe {
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
-    border: 1px solid blac;
+    border: 1px solid black;
   }
