--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,7 +118,7 @@ ga('send', 'pageview');
 
 <!-- Site Title
 ================================================== -->
-<div class="mainheadin">
+<div class="mainheading">
 <!--
     <div class="row post-top-meta"></div>
 -->
