--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@ ga('send', 'pageview');
                 <li class="nav-item">
                 {% endif %}
                 <!--
-                <a class="nav-link" href="{{ site.baseurl }}/ndex.html">Home</a>
+                <a class="nav-link" href="{{ site.baseurl }}/index.html">Home</a>
                 </li>
                 -->
 
