--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -51,7 +51,8 @@ pre {
 .site-content {
     min-height: 60vh;
     padding-top: 1.5rem;
-    margin-top: 57px;
+ /*   margin-top: 57px; */
+    margin-top: 150px;
     transition: all 0.4s;
 }
 
