--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -53,6 +53,7 @@ pre {
     padding-top: 1.5rem;
     margin-top: 57px;
     transition: all 0.4s;
+    background-color: #c52020; /* for demo purposes */
 }
 
 section {
