--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -116,7 +116,7 @@ ga('send', 'pageview');
 
 <div class="site-content">
 
-<div class="containe">
+<div class="container">
 
 <!-- Site Title
 ================================================== -->
