--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -116,7 +116,7 @@ ga('send', 'pageview');
 
 <div class="site-content">
 
-<div class="container bg-info">
+<div class="container">
 
 <!-- Site Title
 ================================================== -->
@@ -147,7 +147,7 @@ ga('send', 'pageview');
 
 <!-- Content
 ================================================== -->
-<div class="main-content">
+<div class="main-content bg-info">
     {{ content }}
 </div>
 
