--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -45,8 +45,8 @@ pre {
 }
 
 .main-content {
-    min-height: 300px;
-/*    background-color: #53239c; /* for demo purposes */
+    min-height: 100px;
+    background-color: #53239c; /* for demo purposes */
 }
 
 .site-content {
