--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -46,7 +46,7 @@ pre {
 
 .main-content {
     min-height: 100px;
-    background-color: #53239c; /* for demo purposes */
+    background-colo: #53239c; /* for demo purposes */
 }
 
 .site-content {
