--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -147,7 +147,7 @@ ga('send', 'pageview');
 
 <!-- Content
 ================================================== -->
-<div class="main-content bg-info">
+<div class="main-content">
     {{ content }}
 </div>
 
