--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -45,7 +45,7 @@ pre {
 }
 
 .main-content {
-    min-height: 300px;
+    min-heigt: 300px;
 /*    background-color: #53239c; /* for demo purposes */
 }
 
