--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -201,7 +201,7 @@ ga('send', 'pageview');
 <!-- Begin Footer
 ================================================== -->
 <footer class="footer">
-    <div class="container bg-warning">
+    <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-6 text-center text-lg-left">
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
