--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -931,16 +931,8 @@ iframe {
     margin: 20px auto 20px;
     -webkit-border-radius: 100%;
             border-radius: 100%;
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
     overflow: hidden;
     background-color: white;
 }
-
-/*
-.box {
-    display: inline-flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start;
-    border: 1px solid black;
-  }
- */ 
