--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -925,7 +925,7 @@ iframe {
 */
 
 .cover-author-image {
-    display: block;
+/*    display: block; */
     width: 200px;
     height: 200px;
     margin: 20px auto 20px;
