--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -908,11 +908,7 @@ iframe {
 }
 
 /* 2/26/24 - adding new for landing page  
-.about {
-    margin: 0 0 40px;
-    text-align: center;
-}
-  
+
 .about .cover-author-image {
     width: 100px;
     height: 100px;
@@ -928,12 +924,10 @@ iframe {
     width: 200px;
     height: 200px;
     margin: 20px auto 20px;
-/*    margin-left: auto;
-    margin-right: auto; */
-    -webkit-border-radius: 100%;
+   -webkit-border-radius: 100%;
             border-radius: 100%;
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%);
+/*    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+/*    filter: grayscale(100%); */
     overflow: hidden;
     background-color: white;
 }
