--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -924,10 +924,10 @@ iframe {
     width: 200px;
     height: 200px;
     margin: 20px auto 20px;
-   -webkit-border-radius: 100%;
+    -webkit-border-radius: 100%;
             border-radius: 100%;
-/*    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-/*    filter: grayscale(100%); */
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
     overflow: hidden;
     background-color: white;
 }
