--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -926,8 +926,8 @@ iframe {
     margin: 20px auto 20px;
     -webkit-border-radius: 100%;
             border-radius: 100%;
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%);
+ /*   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+/*    filter: grayscale(100%); */
     overflow: hidden;
     background-color: white;
 }
