--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -943,8 +943,17 @@ bottom margin is 15px
 */
 
 /* 5/31/24 - adding new for centering images/captions  
-https://stackoverflow.com/questions/3912694/using-markdown-how-do-i-center-an-image-and-its-caption*/
+https://stackoverflow.com/questions/3912694/using-markdown-how-do-i-center-an-image-and-its-caption
+
+https://stackoverflow.com/questions/19331362/using-an-image-caption-in-markdown-jekyll */
+
 .image-caption {
+    text-align: center;
+    font-size: .8rem;
+    color: lightgrey;
+}
+
+.image {
     text-align: center;
     font-size: .8rem;
     color: lightgrey;
