--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -953,8 +953,6 @@ https://stackoverflow.com/questions/19331362/using-an-image-caption-in-markdown-
     color: lightgrey;
 }
 
-.image {
-    text-align: center;
-    font-size: .8rem;
-    color: lightgrey;
+.image-center {
+    display: block;
 }
