--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -955,4 +955,6 @@ https://stackoverflow.com/questions/19331362/using-an-image-caption-in-markdown-
 
 .image-center {
     display: block;
+    margin-left:auto; 
+    margin-right:auto;
 }
