--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,8 @@ post_class: post-template
                 <!-- Post Title -->
                 <h1 class="posttitle">{{ page.title }}</h1>
                 <h1 class="posttitle-meta">
-                    <span class="post-date"><span>Published on </span><time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time><span> |           
+                    <span class="post-date"><span>Published on </span>
+                    <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time><span> |           
                 {% include reading-time.html %}</span></h1>
             </div>
 
