--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,7 +45,7 @@ post_class: post-template
                             <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time>
                         {% if page.last_modified_at %}
                         <span><i> (Updated: </i></span>
-                             <time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time>)
+                            <i><time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time></i>)
                         {% endif %}          
                         <span> | {% include reading-time.html %}</span>
                 </h1>
