--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,7 +47,7 @@ post_class: post-template
                         <span><i> (Updated: </i></span>
                         <!-- <i><time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time></i>) -->
                         <!--    {% last_modified {{ post.path }} %} )   -->
-                            {% capture lastModificationDate %}{% last_modified {{ page.path }} %}{% endcapture %} )
+                        <!--     {% capture lastModificationDate %}{% last_modified {{ page.path }} %}{% endcapture %} ) -->
                         <!-- {% endif %} -->
                         <span> | {% include reading-time.html %}</span>
                 </h1>
