--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,8 +44,9 @@ post_class: post-template
                         <span>Published on </span>
                             <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time>
                         {% if page.last_modified_at %}
-                        <span><i> (Updated: </i></span>
-                            <i><time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time></i>)
+                            <span><i> (Updated: </i></span>
+                                <i><time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time></i>)
+                        {% endif %}
                         <span> | {% include reading-time.html %}</span>
 
                 </h1>
