--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,12 +43,12 @@ post_class: post-template
                     <span class="post-date">
                         <span>Published on </span>
                             <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time>
+                        <span> | {% include reading-time.html %}</span>
+                        <!-- If post has last_modified_at -->
                         {% if page.last_modified_at %}
                             <span><i> (Updated: </i></span>
                                 <i><time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time></i>)
                         {% endif %}
-                        <span> | {% include reading-time.html %}</span>
-
                 </h1>
             </div>
 
